tenant resource for component

--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
 - bases/core.kalm.dev_acmeservers.yaml
 - bases/core.kalm.dev_logsystems.yaml
 - bases/core.kalm.dev_rolebindings.yaml
+- bases/core.kalm.dev_tenants.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
