component resource list

--- a/controller/config/manager/kustomization.yaml
+++ b/controller/config/manager/kustomization.yaml
@@ -1,8 +1,9 @@
-resources:
 #- manager.yaml
+resources:
 - manager-ns.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: diveinto/tmp-controller
+  newName: kalmhq/kalm-controller
+  newTag: latest
