1. fix webhook path: /admission-handler-v1-svc
2. update test

--- a/controller/config/webhook/manifests.yaml
+++ b/controller/config/webhook/manifests.yaml
@@ -474,7 +474,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-v1-svc
+      path: /admission-handler-v1-svc
   failurePolicy: Fail
   name: vsvc.kb.io
   rules:
