disable istio.AuthnPolicy, use k8s.NetworkPolicy only

--- a/controller/config/manager/manager-ns.yaml
+++ b/controller/config/manager/manager-ns.yaml
@@ -5,4 +5,5 @@ metadata:
     control-plane: controller
     kalm-enabled: "true"
     istio-injection: enabled
+    kalm-control-plane: "true"
   name: system
