--- a/operator/resources/cert-manager/cert-manager.yaml
+++ b/operator/resources/cert-manager/cert-manager.yaml
@@ -6291,6 +6291,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: cert-manager
+  labels:
+    kalm-control-plane: "true"
 ---
 # Source: cert-manager/templates/cainjector-serviceaccount.yaml
 apiVersion: v1
